--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^3.6.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@emailjs/browser": "^4.4.1",
     "@fontsource-variable/oswald": "^5.0.20",
     "@fontsource-variable/yanone-kaffeesatz": "^5.0.24",
     "@fontsource/krona-one": "^5.0.13",
     "@fontsource/twinkle-star": "^5.0.20",
     "astro": "^4.11.5",
+    "canvas-confetti": "^1.9.3",
+    "sweetalert2": "^11.12.3",
     "tailwindcss": "^3.4.4"
   }
 }
