--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "astro": "^4.11.5",
     "canvas-confetti": "^1.9.3",
     "sweetalert2": "^11.12.3",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "vite": "^5.3.5"
   }
 }
