--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@fontsource/twinkle-star": "^5.0.20",
     "astro": "^4.11.5",
     "canvas-confetti": "^1.9.3",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.12.3",
     "tailwindcss": "^3.4.4",
     "vite": "^5.3.5"
